crates/yokectl/tests/snapshots/help_snapshots__help_text_snapshots@delete.snap
---
source: crates/yokectl/tests/help_snapshots.rs
expression: stdout
---
Delete a profile from the volume. --force skips the confirmation prompt; --json implies --force because there is no interactive prompt path under machine-readable output.

Usage: yokectl delete [OPTIONS] <NAME>

Arguments:
  <NAME>
          Profile name on the volume

Options:
      --fake-volume <FAKE_VOLUME>
          Use a directory as a fake volume backend instead of the platform device

      --force
          Skip the confirmation prompt

      --json
          Emit machine-readable JSON on stdout (NDJSON for watch)

  -v, --verbose...
          Increase tracing verbosity on stderr; repeat (-vv reveals info, -vvv debug)

      --no-color
          Disable ANSI styling (NO_COLOR=1 or non-TTY stdout also disable)

  -h, --help
          Print help (see a summary with '-h')
