crates/yokectl/tests/snapshots/help_snapshots__help_text_snapshots@docs.snap
---
source: crates/yokectl/tests/help_snapshots.rs
expression: stdout
---
Generate documentation artifacts derived from the live clap tree. --format man writes one roff(7) page per command node into <DIR>/man/. --format md writes a single hierarchical markdown reference into <DIR>/markdown/yokectl.md. Re-runs overwrite in place.

Usage: yokectl docs [OPTIONS] --format <FORMAT> --out <OUT>

Options:
      --fake-volume <FAKE_VOLUME>
          Use a directory as a fake volume backend instead of the platform device

      --format <FORMAT>
          Output format
          
          [possible values: man, md]

      --json
          Emit machine-readable JSON on stdout (NDJSON for watch)

      --out <OUT>
          Output directory (created if missing)

  -v, --verbose...
          Increase tracing verbosity on stderr; repeat (-vv reveals info, -vvv debug)

      --no-color
          Disable ANSI styling (NO_COLOR=1 or non-TTY stdout also disable)

  -h, --help
          Print help (see a summary with '-h')
