crates/yokectl/tests/snapshots/help_snapshots__help_text_snapshots@index.snap
---
source: crates/yokectl/tests/help_snapshots.rs
expression: stdout
---
Query the community profile index

Usage: yokectl index [OPTIONS] <COMMAND>

Commands:
  list    List the cached community index as a table
  search  Fuzzy-filter the index by name
  show    Print an index row, including the resolved CSV URL
  update  Force-refresh the cached community index
  help    Print this message or the help of the given subcommand(s)

Options:
      --fake-volume <FAKE_VOLUME>  Use a directory as a fake volume backend instead of the platform device
      --json                       Emit machine-readable JSON on stdout (NDJSON for watch)
  -v, --verbose...                 Increase tracing verbosity on stderr; repeat (-vv reveals info, -vvv debug)
      --no-color                   Disable ANSI styling (NO_COLOR=1 or non-TTY stdout also disable)
  -h, --help                       Print help
