crates/yokectl/tests/snapshots/help_snapshots__help_text_snapshots@manual.snap
---
source: crates/yokectl/tests/help_snapshots.rs
expression: stdout
---
Open the upstream QuadStick user manual in the default browser. Bare invocation opens the root page; a known topic slug opens the matching sub-page. Under --json the resolved URL is printed to stdout and no browser is launched.

Usage: yokectl manual [OPTIONS] [TOPIC]

Arguments:
  [TOPIC]
          Optional topic slug; omit to open the manual root

Options:
      --fake-volume <FAKE_VOLUME>
          Use a directory as a fake volume backend instead of the platform device

      --json
          Emit machine-readable JSON on stdout (NDJSON for watch)

  -v, --verbose...
          Increase tracing verbosity on stderr; repeat (-vv reveals info, -vvv debug)

      --no-color
          Disable ANSI styling (NO_COLOR=1 or non-TTY stdout also disable)

  -h, --help
          Print help (see a summary with '-h')
